--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       </a>
     </div>
     <div>
-      <a href="images/2.jpeg" target="_blank">
+      <a href="images/2.jpg" target="_blank">
       <img width="400px" src="images/2.jpg" alt="图片2">
       </a>
     </div>
